# static-website-s3-monitoring

./: Cargo.toml  README.md  example_eventbridge_event.json
lambda/: Cargo.toml  README.md
lambda/src/: graph_experiment.rs  main.rs
src/: main.rs
website/: Cargo.toml  Dockerfile  README.md  apigw_no_host.json  lambda_policy.json  lambda_policy_assume.json  lambda_url_http.json
website/src/: main.rs
