[package]
name = "static-website-s3-monitoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
aws-config = { version = "1.1.2", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.12.0"
aws-sdk-sso = "1.10.0"
aws-smithy-async = "1.1.3"
aws-smithy-runtime-api = "1.1.3"
clap = { version = "4.4.18", features = ["derive"] }
http = "1.0.0"
s3_access_log_rust = { git = "https://github.com/knil-sama/s3-access-log-rust", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
