[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
aws-config = { version = "1.1.2", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.12.0"
aws-sdk-sso = "1.10.0"
aws-smithy-async = "1.1.3"
aws-smithy-runtime-api = "1.1.3"
aws-sdk-dynamodb = "1.20.0"
futures = "0.3.30"
serde_dynamo = "4.2.14"
thiserror = "1.0.63"
serde_json = "1.0.120"
aws-smithy-types = "1.2.0"
serde = "1.0.204"
tracing = "0.1.40"
counter = "0.6.0"
tracing-subscriber = "0.3.18"
lambda_runtime = "0.13.0"
lambda_http = "0.14.0"
tokio = "1.39.2"